# autoit

./: CMakeLists.txt  Makefile.msc  autoit.cpp  autoit.rc  example.cpp
examples/: test.au  test.bin_
pyautoit/: example.py  pyautoit.cpp  pyautoit.pyd  setup.cfg  setup.py
pywrap/: CMakeLists.txt  example.py  pyautoit.cpp  pyautoit.idb  setup.py
src/: CMakeLists.txt  au3dump.cpp  autoit.cpp  autoit.def  autoit.h  resource.h  strconv.cpp
test/: CMakeLists.txt  test.au  test.au3  testautoit.cpp
