PROJECT(autoit)
	
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_LIST
autoit.cpp
autoit.rc)

INCLUDE_DIRECTORIES("D:\\src\\include")
LINK_DIRECTORIES("D:\\src\\lib")

ADD_DEFINITIONS(-D__MSVCRT_VERSION__=0x0601)
ADD_LIBRARY(autoit_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(autoit_static PROPERTIES OUTPUT_NAME "autoit")
SET_TARGET_PROPERTIES(autoit_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(autoit_dynamic SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(autoit_dynamic version)
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES OUTPUT_NAME "autoit")
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES VERSION 0.3 SOVERSION 1)

#install
INSTALL(TARGETS autoit_static autoit_dynamic
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION lib)
INSTALL(TARGETS autoit_dynamic DESTINATION lib )
INSTALL(FILES autoit.h DESTINATION include)
