CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(autoit)

#util
IF (NOT TARGET util)
	ADD_SUBDIRECTORY(../util util)
ENDIF ()
INCLUDE_DIRECTORIES("${util_SOURCE_DIR}")
LINK_DIRECTORIES("${util_BINARY_DIR}")

SET(SRC_LIST
autoit.cpp)

#static library
ADD_LIBRARY(autoit STATIC ${SRC_LIST})
ADD_DEPENDENCIES(autoit util)
SET_TARGET_PROPERTIES(autoit PROPERTIES OUTPUT_NAME "autoit")
SET_TARGET_PROPERTIES(autoit PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(autoit PROPERTIES MERGE_STATIC_LIBS "d:\\src\\util\\build\\x86\\nmake\\release\\lib\\util.lib")
TARGET_LINK_LIBRARIES(autoit util)

#tool
SET(TOOL_SRC_LIST
au3dump.cpp)
ADD_EXECUTABLE(au3dump ${TOOL_SRC_LIST})
TARGET_LINK_LIBRARIES(au3dump util autoit )

#install
INSTALL(TARGETS autoit ARCHIVE DESTINATION lib)
INSTALL(FILES autoit.h DESTINATION include)
INSTALL(TARGETS au3dump RUNTIME DESTINATION bin)

