SET(SRC_LIST
autoit.cpp
strconv.cpp)

IF(WIN32)
ADD_DEFINITIONS(-D__MSVCRT_VERSION__=0x0601)
ENDIF(WIN32)

#static library
ADD_LIBRARY(autoit_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(autoit_static PROPERTIES OUTPUT_NAME "autoit")
SET_TARGET_PROPERTIES(autoit_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#dynamic library
ADD_LIBRARY(autoit_dynamic SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES OUTPUT_NAME "autoit")
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(autoit_dynamic PROPERTIES VERSION 0.3 SOVERSION 1)

#tool
SET(TOOL_SRC_LIST
au3dump.cpp)
ADD_EXECUTABLE(au3dump ${TOOL_SRC_LIST})
TARGET_LINK_LIBRARIES(au3dump autoit_static)
TARGET_LINK_LIBRARIES(au3dump filemap)

#install
INSTALL(TARGETS autoit_static autoit_dynamic
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION bin
	RUNTIME DESTINATION bin)
INSTALL(FILES autoit.h DESTINATION include)
INSTALL(TARGETS au3dump RUNTIME DESTINATION bin)